--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,141 +1,169 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity"
-    android:weightSum="2">
+    tools:context=".MainActivity">
 
-        <LinearLayout
-            android:id="@+id/top_layout"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <View
+            android:id="@+id/top_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
+            android:layout_height="0dp"
             android:background="@color/view_color"
-            android:layout_weight="1">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/bottom_view"
+            app:layout_constraintVertical_weight="0.5"/>
 
-            <TextView
-                style="@style/open_sans_font"
-                android:id="@+id/settings_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/settings"
-                android:textSize="24sp"
-                android:textColor="@color/white"
-                android:layout_margin="16sp"
-                tools:targetApi="p" />
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="113dp"
-                android:layout_height="113dp"
-                android:src="@drawable/profile_photo"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="24dp"/>
-
-            <TextView
-                style="@style/open_sans_font"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/diamond_sword"
-                android:textSize="18sp"
-                android:textColor="@color/white"
-                android:layout_gravity="center"
-                android:layout_marginTop="24dp"
-                tools:targetApi="p" />
-
-            <TextView
-                style="@style/open_sans_font"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Career"
-                android:textSize="14sp"
-                android:textColor="@color/gray_text"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"
-                tools:targetApi="p" />
-
-            <TextView
-                style="@style/open_sans_font"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Home address"
-                android:textSize="14sp"
-                android:textColor="@color/gray_text"
-                android:layout_gravity="center"
-                android:layout_marginTop="16dp"
-                tools:targetApi="p" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/bottom_layout"
+        <View
+            android:id="@+id/bottom_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_weight="1">
+            android:layout_height="0dp"
+            android:background="@color/white"
+            app:layout_constraintTop_toBottomOf="@+id/top_view"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_weight="0.5"/>
 
             <LinearLayout
-                android:id="@+id/icons_layout"
+                android:id="@+id/top_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="62dp"
-                android:gravity="center_horizontal">
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="@id/top_view"
+                app:layout_constraintBottom_toTopOf="@id/bottom_view"
+                android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:src="@drawable/facebook_icon"
-                    android:clickable="true"/>
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/settings_text"
+                    style="@style/open_sans_font"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/settings_top_margin"
+                    android:text="@string/settings"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/settings_text_size"/>
 
-                <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:src="@drawable/linked_in_icon"
-                    android:layout_marginHorizontal="32dp"
-                    android:clickable="true"/>
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:layout_width="113dp"
+                    android:layout_height="113dp"
+                    android:src="@drawable/profile_photo"
+                    android:layout_gravity="center_horizontal"
+                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
+                    android:layout_marginTop="@dimen/profile_avatar_top_margin"/>
 
-                <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:src="@drawable/instagram_icon"
-                    android:clickable="true"/>
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/profile_name_text_view"
+                    style="@style/open_sans_font"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/diamond_sword"
+                    android:textSize="@dimen/profile_name_text_size"
+                    android:textColor="@color/white"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/profile_name_top_margin"
+                    tools:targetApi="p" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/career_text_view"
+                    style="@style/open_sans_font"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/career"
+                    android:textSize="@dimen/career_text_size"
+                    android:textColor="@color/gray_text"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/career_margin_top"/>
+
+                <com.google.android.material.textview.MaterialTextView
+                    style="@style/open_sans_font"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/home_address"
+                    android:textSize="@dimen/address_text_size"
+                    android:textColor="@color/gray_text"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/address_margin_top"/>
 
             </LinearLayout>
 
-            <TextView
-                style="@style/open_sans_font"
+            <LinearLayout
+                android:id="@+id/bottom_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Go to settings and fill out the profile"
-                android:gravity="center_horizontal"
-                android:textSize="14dp"
-                android:textColor="@color/black"
-                android:layout_marginTop="61dp"/>
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@id/top_view">
 
-            <Button
-                style="@style/edit_profile_btn"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                app:strokeColor = "@color/view_color"
-                app:strokeWidth = "2dp"/>
+                <LinearLayout
+                    android:id="@+id/icons_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="@dimen/icons_ll_margin_top"
+                    android:gravity="center_horizontal">
 
-            <Button
-                style="@style/open_sans_font"
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="16dp"
-                android:insetTop="0dp"
-                android:insetBottom="0dp"
-                android:text="View my contacts"
-                android:textSize="16sp"
-                app:cornerRadius="6dp"
-                android:backgroundTint="@color/orange"/>
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:background="@drawable/shape"
+                        app:srcCompat="@drawable/facebook_icon_vector"
+                        android:layout_gravity="center"/>
 
-        </LinearLayout>
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        app:srcCompat="@drawable/linked_in_icon_vector"
+                        android:layout_marginHorizontal="@dimen/center_icon_margin_horizontal"
+                        android:clickable="true"/>
 
-</LinearLayout>
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        app:srcCompat="@drawable/instagram_icon_vector"
+                        android:clickable="true"/>
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/fill_out_profile_text_view"
+                    style="@style/open_sans_font"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/fill_out_profile_margin_top"
+                    android:gravity="center_horizontal"
+                    android:text="@string/go_to_settings_and_fill_out_the_profile"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/fill_out_profile_text_size" />
+
+                <Button
+                    android:id="@+id/edit_profile_btn"
+                    style="@style/edit_profile_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    app:strokeColor="@color/view_color"
+                    app:strokeWidth="@dimen/edit_profile_stroke_width"/>
+
+                <Button
+                    android:id="@+id/view_contacts_btn"
+                    style="@style/open_sans_font"
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:layout_marginHorizontal="@dimen/view_contacts_margin_horizontal"
+                    android:layout_marginTop="@dimen/view_contacts_margin_top"
+                    android:layout_marginBottom="@dimen/view_contacts_margin_bottom"
+                    android:insetTop="0dp"
+                    android:insetBottom="0dp"
+                    android:text="@string/view_my_contacts"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/view_contacts_text_size"
+                    app:cornerRadius="@dimen/view_contacts_corner_radius"
+                    android:backgroundTint="@color/orange"/>
+
+            </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
