--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-
     <style name="open_sans_font">
         <item name="android:fontFamily">@font/open_sans_regular</item>
         <item name="android:textFontWeight" tools:targetApi="p">600</item>
@@ -13,14 +12,18 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:fontFamily">@font/open_sans_regular</item>
         <item name="android:textFontWeight" tools:targetApi="p">600</item>
-        <item name="android:textSize">14sp</item>
-        <item name="android:layout_marginHorizontal">16dp</item>
-        <item name="android:layout_marginTop">16dp</item>
+        <item name="android:textSize">@dimen/edit_profile_text_size</item>
+        <item name="android:layout_marginHorizontal">@dimen/edit_profile_margin_horizontal</item>
+        <item name="android:layout_marginTop">@dimen/edit_profile_margin_top</item>
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:insetLeft">0dp</item>
         <item name="android:insetTop">0dp</item>
         <item name="android:insetRight">0dp</item>
         <item name="android:insetBottom">0dp</item>
+    </style>
+
+    <style name="ShapeAppearanceOverlay.App.CornerSize50Percent" parent="">
+        <item name="cornerSize">50%</item>
     </style>
 
 </resources>
