--- a/app/src/main/res/drawable/shape.xml
+++ b/app/src/main/res/drawable/shape.xml
@@ -2,11 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid
-        android:color="#fff"/>
+    <solid android:color="#fff" />
 
     <size
         android:width="113dp"
-        android:height="113dp"/>
+        android:height="113dp" />
 
 </shape>
