--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -64,8 +64,7 @@
                 android:layout_marginTop="@dimen/profile_name_top_margin"
                 android:text="@string/diamond_sword"
                 android:textColor="@color/white"
-                android:textSize="@dimen/profile_name_text_size"
-                tools:targetApi="p" />
+                android:textSize="@dimen/profile_name_text_size"/>
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/career_text_view"
@@ -142,7 +141,7 @@
                 android:id="@+id/edit_profile_btn"
                 style="@style/edit_profile_btn"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 app:strokeColor="@color/view_color"
                 app:strokeWidth="@dimen/edit_profile_stroke_width" />
 
@@ -150,13 +149,12 @@
                 android:id="@+id/view_contacts_btn"
                 style="@style/open_sans_font"
                 android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:layout_marginHorizontal="@dimen/view_contacts_margin_horizontal"
-                android:layout_marginTop="@dimen/view_contacts_margin_top"
-                android:layout_marginBottom="@dimen/view_contacts_margin_bottom"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/view_contacts_margin"
                 android:backgroundTint="@color/orange"
                 android:insetTop="0dp"
                 android:insetBottom="0dp"
+                android:paddingVertical="@dimen/view_contacts_padding"
                 android:text="@string/view_my_contacts"
                 android:textColor="@color/white"
                 android:textSize="@dimen/view_contacts_text_size"
