--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <style name="open_sans_font">
         <item name="android:fontFamily">@font/open_sans_regular</item>
-        <item name="android:textFontWeight" tools:targetApi="p">600</item>
+        <item name="android:textFontWeight" >600</item>
     </style>
 
     <style name="edit_profile_btn">
@@ -11,10 +11,10 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:fontFamily">@font/open_sans_regular</item>
-        <item name="android:textFontWeight" tools:targetApi="p">600</item>
+        <item name="android:textFontWeight">600</item>
         <item name="android:textSize">@dimen/edit_profile_text_size</item>
         <item name="android:layout_marginHorizontal">@dimen/edit_profile_margin_horizontal</item>
-        <item name="android:layout_marginTop">@dimen/edit_profile_margin_top</item>
+        <item name="android:layout_marginBottom">@dimen/edit_profile_margin_bottom</item>
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:insetLeft">0dp</item>
         <item name="android:insetTop">0dp</item>
